<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:id="@+id/randommac_header"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/randommac_header"
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/blank"
    />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/randommac_current_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_mac"
        />
    <TextView
        android:id="@+id/randommac_macaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/randommac_next_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_mac"
        />
    <TextView
        android:id="@+id/randommac_nextmacaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank"
        />
    </LinearLayout>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/blank"
    />
<Button
    android:id="@+id/randommac_randomize_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/randommac_randomize"
    android:onClick="showNewAddress"
    />
<Button
    android:id="@+id/randommac_apply_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_apply"
    android:onClick="applyNewAddress"
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/blank"
    />
<Button
    android:id="@+id/randommac_cancel_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/button_cancel"
    />
</LinearLayout>
